feat: better time handler

--- a/config/schedule_columns.yaml
+++ b/config/schedule_columns.yaml
@@ -6,3 +6,6 @@ room_column: "Room in Ole Johan Dalshus"
 main_instructor_column: "Instructor 1"
 helper_instructor_column: "Instructor 2"
 max_attendance: "Max capacity"
+duration_column: "Length"
+start_time_column: "Start time"
+end_time_column: "End time"
