--- a/config/schedule_columns.yaml
+++ b/config/schedule_columns.yaml
@@ -9,3 +9,4 @@ max_attendance: "Max capacity"
 duration_column: "Length"
 start_time_column: "Start time"
 end_time_column: "End time"
+networking_event_column: "Networking event"
