--- a/config/schedule_columns.yaml
+++ b/config/schedule_columns.yaml
@@ -2,6 +2,7 @@ date_column: "Date"
 time_column: "Time"
 title_column: "Workshop name"
 id_column: "Number"
+nettskjema_id_column: "Nettskjema ID"
 room_column: "Room in Ole Johan Dalshus"
 main_instructor_column: "Instructor 1"
 helper_instructor_column: "Instructor 2"
