--- a/config/rooms.yaml
+++ b/config/rooms.yaml
@@ -16,6 +16,6 @@ Prolog (room 2465):
 Postscript (room 2458):
   name: "Postscript (room 2458) in Ole-Johan Dahls hus (OJD)"
   url: "https://use.mazemap.com/#v=1&config=uio&center=10.718931,59.943959&zoom=18&sharepoitype=poi&sharepoi=1000987608&zlevel=2&campusid=799"
-Auditorium Smalltalk:
+Auditorium Smalltalk (room 1416):
   name: "Auditorium Smalltalk, Ole Johan Dalshus (OJD)"
   url: "https://use.mazemap.com/?campusid=799&sharepoitype=identifier&sharepoi=GA06-1416&config=uio"
