--- a/config/schedule_columns.yaml
+++ b/config/schedule_columns.yaml
@@ -11,4 +11,4 @@ duration_column: "Length"
 start_time_column: "Start time"
 end_time_column: "End time"
 networking_event_column: "Networking event"
-status_column: "Instructor: confirm time"
+status_column: "Instructor: confirm tentative date & time"
