Add missing room

--- a/config/rooms.yaml
+++ b/config/rooms.yaml
@@ -16,6 +16,9 @@ Prolog (room 2465):
 Postscript (room 2458):
   name: "Postscript (room 2458) in Ole-Johan Dahls hus (OJD)"
   url: "https://use.mazemap.com/#v=1&config=uio&center=10.718931,59.943959&zoom=18&sharepoitype=poi&sharepoi=1000987608&zlevel=2&campusid=799"
+Java (room 2423):
+  name: "Java (room 2423) in Ole-Johan Dahls hus (OJD)"
+  url: "https://use.mazemap.com/#v=1&config=uio&campusid=799&zlevel=2&center=10.718043,59.943400&zoom=18&sharepoitype=poi&sharepoi=1000987633"
 Auditorium Smalltalk (room 1416):
   name: "Auditorium Smalltalk, Ole Johan Dalshus (OJD)"
   url: "https://use.mazemap.com/?campusid=799&sharepoitype=identifier&sharepoi=GA06-1416&config=uio"
